@@ -67,7 +67,10 @@
                        (setf ind (if (< ind len) (1+ ind) 0))))
                    (format str "~A" filename))))
     (format t "~A~%" command)
-    (do-shell command nil t)))
+    (let ((output (do-shell command nil t)))
+      (loop for line = (read-line output nil nil)
+         while line
+         do (format t "~A~%" line)))))
 
 (defun create-wallpaper (filename &rest images)
   (format t "Creating wallpaper ~A from ~{~A ~}~%" filename images)
